--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@fortawesome/fontawesome-free": "^6.5.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.2.1",
     "react-router-dom": "^6.22.3",
-    "react-scroll": "^1.9.0"
+    "react-scroll": "^1.9.0",
+    "styled-components": "^6.1.11"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
