--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.5.2",
+    "aos": "^2.3.4",
     "@react-oauth/google": "^0.12.1",
     "jwt-decode": "^4.0.0",
     "bootstrap": "^5.3.3",
