Added Dark Mode Toggle button
Signed-off-by: Hemashree M S <hemashree21.msh@gmail.com>

--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.5.2",
-    "aos": "^2.3.4",
     "@react-oauth/google": "^0.12.1",
-    "jwt-decode": "^4.0.0",
+    "antd": "^5.17.3",
+    "aos": "^2.3.4",
     "bootstrap": "^5.3.3",
+    "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
     "react-chatbot-kit": "^2.2.2",
@@ -22,6 +23,7 @@
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.23.1",
     "react-scroll": "^1.9.0",
+    "react-switch": "^7.0.0",
     "styled-components": "^6.1.11"
   },
   "devDependencies": {
