--- a/package.json
+++ b/package.json
@@ -11,10 +11,15 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.5.2",
-    "aos": "^2.3.4",
     "@react-oauth/google": "^0.12.1",
-    "jwt-decode": "^4.0.0",
+    "aos": "^2.3.4",
+    "aws-sdk": "^2.1631.0",
+    "bcrypt": "^5.1.1",
     "bootstrap": "^5.3.3",
+    "express": "^4.19.2",
+    "jwt-decode": "^4.0.0",
+    "mock-aws-s3": "^4.0.2",
+    "nock": "^13.5.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
     "react-chatbot-kit": "^2.2.2",
@@ -33,6 +38,7 @@
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
+    "html-loader": "^5.0.0",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.3",
     "vite": "^5.2.11"
