--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "antd": "^5.17.4",
     "aos": "^2.3.4",
     "bootstrap": "^5.3.3",
+    "boxicons": "^2.1.4",
     "jwt-decode": "^4.0.0",
     "lottie-react": "^2.4.0",
     "react": "^18.2.0",
