--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.3.7",
     "@fortawesome/fontawesome-free": "^6.5.2",
     "@react-oauth/google": "^0.12.1",
     "antd": "^5.17.4",
@@ -24,6 +25,7 @@
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.23.1",
     "react-scroll": "^1.9.0",
+    "sass": "^1.77.4",
     "styled-components": "^6.1.11"
   },
   "devDependencies": {
