--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.23.1",
+    "react-scripts": "^5.0.1",
     "react-scroll": "^1.9.0",
     "styled-components": "^6.1.11"
   },
