--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-icons": "^5.2.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1",
+    "react-scripts": "^5.0.1",
     "react-scroll": "^1.9.0",
     "styled-components": "^6.1.11"
   },
