--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
     "@fortawesome/fontawesome-free": "^6.5.2",
     "@react-oauth/google": "^0.12.1",
     "antd": "^5.17.4",
+    "aos": "^2.3.4",
     "boxicons": "^2.1.4",
+    "jwt-decode": "^4.0.0",
     "lottie-react": "^2.4.0",
-
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
     "react-chatbot-kit": "^2.2.2",
