--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "aos": "^2.3.4",
     "axios": "^1.7.2",
     "boxicons": "^2.1.4",
+    "emailjs-com": "^3.2.0",
     "jwt-decode": "^4.0.0",
     "lottie-react": "^2.4.0",
     "react": "^18.2.0",
