--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "axios": "^1.7.2",
     "boxicons": "^2.1.4",
     "emailjs-com": "^3.2.0",
+    "font-awesome": "^4.7.0",
     "jwt-decode": "^4.0.0",
     "lottie-react": "^2.4.0",
     "react": "^18.2.0",
