feat-stripe_payment

--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@react-oauth/google": "^0.12.1",
     "@reduxjs/toolkit": "^2.2.5",
+    "@stripe/react-stripe-js": "^2.7.3",
+    "@stripe/stripe-js": "^4.1.0",
     "antd": "^5.17.4",
     "aos": "^2.3.4",
     "axios": "^1.7.2",
@@ -53,6 +55,7 @@
     "html-webpack-plugin": "^5.6.0",
     "postcss": "^8.4.38",
     "rimraf": "^5.0.7",
+    "sass": "^1.77.8",
     "svgo": "^3.3.2",
     "tailwindcss": "^3.4.3",
     "vite": "^5.3.5",
